crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_mmd_header_identifiers.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..55
  HEADING@0..29
    HEADING_CONTENT@0..12
      TEXT@0..12 "Setext Title"
    WHITESPACE@12..13 " "
    ATTRIBUTE@13..24
      ATTRIBUTE@13..24 "[setext id]"
    NEWLINE@24..25 "\n"
    SETEXT_HEADING_UNDERLINE@25..28
      SETEXT_HEADING_UNDERLINE@25..28 "---"
    NEWLINE@28..29 "\n"
  BLANK_LINE@29..30
    BLANK_LINE@29..30 "\n"
  HEADING@30..55
    ATX_HEADING_MARKER@30..31
      ATX_HEADING_MARKER@30..31 "#"
    WHITESPACE@31..32 " "
    HEADING_CONTENT@32..41
      TEXT@32..41 "ATX Title"
    WHITESPACE@41..42 " "
    ATTRIBUTE@42..50
      ATTRIBUTE@42..50 "[atx id]"
    WHITESPACE@50..51 " "
    ATX_HEADING_MARKER@51..54 "###"
    NEWLINE@54..55 "\n"
