crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_multiline_table_caption.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..506
  MULTILINE_TABLE@0..506
    TABLE_CAPTION@0..61
      TABLE_CAPTION_PREFIX@0..7 "Table: "
      TEXT@7..44 "Here's the caption. I ..."
      NEWLINE@44..45 "\n"
      TEXT@45..60 "multiple lines."
      NEWLINE@60..61 "\n"
    BLANK_LINE@61..62
      BLANK_LINE@61..62 "\n"
    TABLE_SEPARATOR@62..124
      TABLE_SEP_DASHES@62..123 "--------------------- ..."
      NEWLINE@123..124 "\n"
    TABLE_HEADER@124..209
      TABLE_CELL@124..135
        TEXT@124..135 " Centered  "
      WHITESPACE@135..136 " "
      TABLE_CELL@136..143
        TEXT@136..143 "Default"
      WHITESPACE@143..144 " "
      TABLE_CELL@144..159
        TEXT@144..159 "          Right"
      WHITESPACE@159..160 " "
      TABLE_CELL@160..164
        TEXT@160..164 "Left"
      NEWLINE@164..165 "\n"
      TEXT@165..208 "  Header    Aligned   ..."
      NEWLINE@208..209 "\n"
    TABLE_SEPARATOR@209..271
      TABLE_SEP_DASHES@209..220 "-----------"
      TABLE_SEP_WHITESPACE@220..221 " "
      TABLE_SEP_DASHES@221..228 "-------"
      TABLE_SEP_WHITESPACE@228..229 " "
      TABLE_SEP_DASHES@229..244 "---------------"
      TABLE_SEP_WHITESPACE@244..245 " "
      TABLE_SEP_DASHES@245..270 "--------------------- ..."
      NEWLINE@270..271 "\n"
    TABLE_ROW@271..387
      TABLE_CELL@271..282
        TEXT@271..282 "   First   "
      WHITESPACE@282..283 " "
      TABLE_CELL@283..290
        TEXT@283..290 "row    "
      WHITESPACE@290..291 " "
      TABLE_CELL@291..306
        TEXT@291..306 "           12.0"
      WHITESPACE@306..307 " "
      TABLE_CELL@307..328
        TEXT@307..328 "Example of a row that"
      NEWLINE@328..329 "\n"
      TEXT@329..386 "                      ..."
      NEWLINE@386..387 "\n"
    BLANK_LINE@387..388
      BLANK_LINE@387..388 "\n"
    TABLE_ROW@388..444
      TABLE_CELL@388..399
        TEXT@388..399 "  Second   "
      WHITESPACE@399..400 " "
      TABLE_CELL@400..407
        TEXT@400..407 "row    "
      WHITESPACE@407..408 " "
      TABLE_CELL@408..423
        TEXT@408..423 "            5.0"
      WHITESPACE@423..424 " "
      TABLE_CELL@424..443
        TEXT@424..443 "Here's another one."
      NEWLINE@443..444 "\n"
    TABLE_SEPARATOR@444..506
      TABLE_SEP_DASHES@444..505 "--------------------- ..."
      NEWLINE@505..506 "\n"
