crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_multiline_table_headerless.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..403
  MULTILINE_TABLE@0..403
    TABLE_SEPARATOR@0..62
      TABLE_SEP_DASHES@0..11 "-----------"
      TABLE_SEP_WHITESPACE@11..12 " "
      TABLE_SEP_DASHES@12..19 "-------"
      TABLE_SEP_WHITESPACE@19..20 " "
      TABLE_SEP_DASHES@20..35 "---------------"
      TABLE_SEP_WHITESPACE@35..36 " "
      TABLE_SEP_DASHES@36..61 "--------------------- ..."
      NEWLINE@61..62 "\n"
    TABLE_ROW@62..178
      TABLE_CELL@62..73
        TEXT@62..73 "   First   "
      WHITESPACE@73..74 " "
      TABLE_CELL@74..81
        TEXT@74..81 "row    "
      WHITESPACE@81..82 " "
      TABLE_CELL@82..97
        TEXT@82..97 "           12.0"
      WHITESPACE@97..98 " "
      TABLE_CELL@98..119
        TEXT@98..119 "Example of a row that"
      NEWLINE@119..120 "\n"
      TEXT@120..177 "                      ..."
      NEWLINE@177..178 "\n"
    BLANK_LINE@178..179
      BLANK_LINE@178..179 "\n"
    TABLE_ROW@179..341
      TABLE_CELL@179..190
        TEXT@179..190 "  Second   "
      WHITESPACE@190..191 " "
      TABLE_CELL@191..198
        TEXT@191..198 "row    "
      WHITESPACE@198..199 " "
      TABLE_CELL@199..214
        TEXT@199..214 "            5.0"
      WHITESPACE@214..215 " "
      TABLE_CELL@215..239
        TEXT@215..239 "Here's another one. Note"
      NEWLINE@239..240 "\n"
      TEXT@240..298 "                      ..."
      NEWLINE@298..299 "\n"
      TEXT@299..340 "                      ..."
      NEWLINE@340..341 "\n"
    TABLE_SEPARATOR@341..403
      TABLE_SEP_DASHES@341..352 "-----------"
      TABLE_SEP_WHITESPACE@352..353 " "
      TABLE_SEP_DASHES@353..360 "-------"
      TABLE_SEP_WHITESPACE@360..361 " "
      TABLE_SEP_DASHES@361..376 "---------------"
      TABLE_SEP_WHITESPACE@376..377 " "
      TABLE_SEP_DASHES@377..402 "--------------------- ..."
      NEWLINE@402..403 "\n"
